Fix Mux Player on Safari/iOS: add playsinline, inline styles, video object-fit

--- a/src/scss/layout/_booking.scss
+++ b/src/scss/layout/_booking.scss
@@ -104,6 +104,14 @@
       display: block;
       --controls: none;
       --media-object-fit: cover;
+      --media-object-position: center;
+
+      // Safari fix
+      video {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 }
